Create a single large panel figure for the survival stuff, rewrite the text to deal with that appropriately. Also adjust the Makefile to build the script properly now that we're using .docx
Reorganize some of the survival code.

--- a/text/manuscript.Rmd
+++ b/text/manuscript.Rmd
@@ -497,9 +497,9 @@ cat("\\newpage")
 ```{r, results='asis'}
 cat("\\newpage")
 ```
-![](../figures/fig6B.png)
-\newpage
-![](../figures/fig6C.png)
+
+```{r child='../code/survival/survfig.Rmd'}
+```
 
 ## Supplementary Information
 
